updated z-index to fix flicker animation

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@
   position: absolute;
   display: block;
   opacity: 0;
-  z-index: 2;
+  z-index: -2;
   animation: screen-flicker 2s infinite;
 }
 
@@ -272,7 +272,7 @@ input:-webkit-autofill {
     position: absolute;
     display: block;
     opacity: 0;
-    z-index: 2;
+    z-index: -2;
     animation: screen-flicker 2s infinite;
   }
 
@@ -494,7 +494,7 @@ input:-webkit-autofill {
     position: absolute;
     display: block;
     opacity: 0;
-    z-index: 2;
+    z-index: -2;
     animation: screen-flicker 2s infinite;
   }
 
@@ -716,7 +716,7 @@ input:-webkit-autofill {
     position: absolute;
     display: block;
     opacity: 0;
-    z-index: 2;
+    z-index: -2;
     animation: screen-flicker 2s infinite;
   }
 
@@ -939,7 +939,7 @@ input:-webkit-autofill {
     position: absolute;
     display: block;
     opacity: 0;
-    z-index: 2;
+    z-index: -2;
     animation: screen-flicker 2s infinite;
   }
 
